syntax = "proto3";
option java_package = "com.vang.publisherservice.grpc.gen";
option java_outer_classname = "PublisherGrpcServer";
option java_multiple_files = true;
package com.vang;

service GetPublisherById {
  rpc getData(GetPublisherByIdRequest) returns (GetPublisherByIdReply);
}

service UpdateCountPublisher {
  rpc updateCount(UpdateCountPublisherRequest) returns (UpdateCountPublisherReply);
}

message GetPublisherByIdRequest {
  string publisherId = 1;
}

message GetPublisherByIdReply {
  bool status = 1;
  string responseJson = 2;
}

message UpdateCountPublisherRequest {
  string publisherId = 1;
}

message UpdateCountPublisherReply {
  bool status = 1;
}